--- a/OliveiraTaylorOOPFinalProject/OliveiraTaylorOOPFinalProject.csproj
+++ b/OliveiraTaylorOOPFinalProject/OliveiraTaylorOOPFinalProject.csproj
@@ -52,12 +52,14 @@
     <Compile Include="AddItem.Designer.cs">
       <DependentUpon>AddItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="Admin.cs" />
     <Compile Include="Checkout.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Checkout.Designer.cs">
       <DependentUpon>Checkout.cs</DependentUpon>
     </Compile>
+    <Compile Include="Customer.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +72,7 @@
     <Compile Include="Order.Designer.cs">
       <DependentUpon>Order.cs</DependentUpon>
     </Compile>
+    <Compile Include="Person.cs" />
     <Compile Include="ProductMaintenance.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +81,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="AddItem.resx">
       <DependentUpon>AddItem.cs</DependentUpon>
     </EmbeddedResource>
